syntax = "proto3";

option csharp_namespace = "ProductService";

service GrpcProduct {
    rpc GetAllProducts (GetAllRequest) returns (ProductResponse);
}

message GetAllRequest {}

message GrpcProductModel{
    string productId = 1;
    string name = 2;
    string description = 3;
}

message ProductResponse {
    repeated GrpcProductModel product = 1;
}